fix some spacing stuff

--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -34,7 +34,7 @@
   margin: 20px 0;
   width: 100%;
 
-  .button {
+  .button, input[type="submit"] {
     margin-right: 20px;
     margin-left: 0;
   }
@@ -42,7 +42,7 @@
   &.right {
     justify-content: flex-end;
 
-    .button {
+    .button, input[type="submit"] {
       margin-left: 20px;
       margin-right: 0;
     }
@@ -51,7 +51,7 @@
   &.center {
     justify-content: center;
 
-    .button {
+    .button, input[type="submit"] {
       margin: 0 20px;
     }
   }
